syntax = "proto3";

enum UserEvent {
    InitUser = 0;
    SignIn = 1;
    SignUp = 2;
    SignOut = 3;
    UpdateUser = 4;
    GetUserProfile = 5;
    CheckUser = 6;
    SetAppearanceSetting = 7;
    GetAppearanceSetting = 8;
}
